# Agentic_Accelerators

./: .coverage  .gitignore  Accelerator.code-workspace  Makefile  README.md  osv-scanner.toml  pyproject.toml
.github/workflows/: ci.yml  nightly-fresh-resolve.yml
apps/dla/: README.md  pyproject.toml
apps/dla/config/: default.yaml
apps/dla/config/examples/: postgres_large.yaml  postgres_large_staging_only.yaml
apps/dla/config/schemas/: bundle-schema.json
apps/dla/scripts/: install.sh
apps/dla/src/dla/bundle/: __init__.py  contract.py  layout.py  reader.py  schema.py  validate.py  writer.py
apps/dla/src/dla/cli/: bundle.py  coverage.py  describe.py  discover.py  glossary.py  hierarchy.py  importer.py  kpi.py  main.py  patterns.py  profile.py  readiness.py  recommend.py  reconcile.py  run.py  ui.py
apps/dla/src/dla/config/: loader.py  models.py
apps/dla/src/dla/connectors/: base.py  csv_folder.py  postgres.py
apps/dla/src/dla/coverage/: __init__.py
apps/dla/src/dla/describe/: __init__.py  engine.py
apps/dla/src/dla/discovery/: __init__.py  engine.py  relationships.py  tagger.py
apps/dla/src/dla/glossary/: __init__.py  definer.py  extractor.py  feedback_loop.py
apps/dla/src/dla/hierarchy/: __init__.py  artifacts.py
apps/dla/src/dla/importers/: dbt_manifest.py  markdown_notes.py  normalize.py
apps/dla/src/dla/kpi/: __init__.py  artifacts.py  workbook.py
apps/dla/src/dla/orchestrator/: __init__.py  recovery.py  runner.py  state.py
apps/dla/src/dla/patterns/: __init__.py  audit_columns.py  base.py  junction.py  snowflake.py  star.py
apps/dla/src/dla/profiling/: __init__.py  engine.py  samplers.py  statistics.py
apps/dla/src/dla/prompts/templates/: column_v1.j2  column_v2.j2  glossary_v1.j2  table_v1.j2  table_v2.j2
apps/dla/src/dla/readiness/: checks.py  report.py  severity.py
apps/dla/src/dla/recommender/: __init__.py  engine.py  override.py  signals.py  strategies.py
apps/dla/src/dla/reconciliation/: __init__.py  classifier.py  resolve.py  term_mapping.py
apps/dla/src/dla/web/: __init__.py  app.py  edits.py  views.py
apps/dla/src/dla/web/routes/: __init__.py  columns.py  conflicts.py  coverage.py  kpi.py  recommender.py  tables.py  term_mappings.py
apps/dla/src/dla/web/static/: dla.css
apps/dla/src/dla/web/templates/: base.html  column_detail.html  conflicts.html  coverage.html  index.html  kpi.html  kpi_detail.html  recommender.html  table_detail.html  term_mappings.html
apps/dla/src/dla/web/templates/partials/: conflict_resolved.html  kpi_result.html  term_mappings_list.html
apps/dla/tests/e2e/: __init__.py  conftest.py  test_postgres_pipeline.py
apps/dla/tests/eval/: test_glossary_quality.py  test_reconciliation_quality.py
apps/dla/tests/fixtures/client_docs/: notes.md
apps/dla/tests/fixtures/csv/: customers.csv  products.csv
apps/dla/tests/fixtures/dbt/: manifest.json
apps/dla/tests/fixtures/postgres/: docker-compose.yaml
apps/dla/tests/fixtures/postgres_large/: FINDINGS.md  README.md  docker-compose.yaml
apps/dla/tests/fixtures/postgres_large/seed/: 00_schemas.sql  01_sales.sql  02_finance.sql  03_hr.sql  04_staging_nofk.sql  05_analytics_edge.sql  06_distractors.sql  07_quality_issues.sql
apps/dla/tests/integration/: test_coverage_accuracy.py  test_glossary_extraction.py  test_kpi_validation.py  test_late_arriving_docs.py  test_manifest_counts.py  test_orchestrator.py  test_pattern_detection.py  test_pattern_heuristics.py  test_prior_bundle_import.py  test_reconciliation_e2e.py  test_run_describe_failures.py  test_run_interrupt.py  test_term_mapping_precedence.py
apps/dla/tests/unit/: test_bundle_contract.py  test_bundle_contract_parity.py  test_bundle_writer.py  test_composite_fk_grouping.py  test_credential_failfast.py  test_describe_engine.py  test_describe_insufficient_signal.py  test_describe_prompt_cap.py  test_glossary_stoplist.py  test_kpi_dimensions_hierarchy.py  test_manifest_correctness.py  test_profile_table_not_found.py  test_profiling_engine.py  test_profiling_samplers.py  test_profiling_statistics.py  test_readiness_checks.py  test_recommender.py  test_recommender_choice.py  test_reconciliation_classifier.py  test_relationship_inference.py  test_sampling_determinism.py  test_web_m7.py  test_web_m8.py
config/examples/: azure_openai.yaml  csv_folder.yaml  postgres_minimal.yaml
contracts/: README.md  bundle-schema.json
demos/: m1-course-correction.md  m1.md  m2-course-correction.md  m2.md
docs/: ACCELERATOR-REPO-PLAN.md  branch-protection.md  bundle-contract.md  operator-guide.md  releasing.md  repo-structure.md  v1-deferred-scope.md
docs/plans/: 2026-06-11-accelerators-workspace-core-llm.md  2026-06-12-robustness-tier1.md
libs/core/: .coverage  CHANGELOG.md  README.md  pyproject.toml
libs/core/samples/: quickstart.py
libs/core/src/auropro_core/: __init__.py  logging.py  yamlconfig.py
libs/core/tests/: test_logging.py  test_yamlconfig.py  test_yamlconfig_properties.py
libs/llm/: .coverage  CHANGELOG.md  README.md  pyproject.toml
libs/llm/samples/: quickstart.py
libs/llm/src/auropro_llm/: __init__.py  config.py  gateway.py
libs/llm/src/auropro_llm/testing/: __init__.py  conformance.py
libs/llm/tests/: test_conformance_branches.py  test_conformance_litellm.py  test_gateway.py
scripts/: check_contract_mirror.py  check_licenses.py  check_workspace_pins.py  install.sh  license_ignore.txt
scripts/tests/: test_check_contract_mirror.py  test_check_licenses.py  test_check_workspace_pins.py
src/dla/: __init__.py
src/dla/bundle/: layout.py  provenance.py  reader.py  schema.py  writer.py
tests/: conftest.py
tests/eval/: test_reconciliation_quality.py
tests/integration/: test_csv_dictionary_import.py  test_dbt_import.py
tests/ui/: conftest.py  test_bulk_actions.py  test_conflicts_ui.py  test_inline_edit.py
tests/unit/: test_bundle_writer.py  test_config.py  test_describe_engine.py  test_llm_gateway.py  test_profiling_statistics.py  test_prompt_registry.py  test_provenance.py  test_readiness_checks.py  test_web_bind.py  test_web_conflicts.py  test_web_views.py
(+56 files in other folders)
