[project]
name = "auropro-accelerators"
version = "0.0.0"
description = "AuroPro Agentic AI Accelerators — uv workspace root (not published)"
requires-python = ">=3.11,<3.13"
classifiers = ["Private :: Do Not Upload"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["libs/*", "apps/*"]

[dependency-groups]
dev = [
    "pytest>=8.2.0,<9",
    "ruff>=0.4.0,<1",
    "mypy>=1.10.0,<2",
    "types-PyYAML>=6.0.12,<7",
    "httpx>=0.27.0,<1",
    "python-semantic-release>=10.4,<11",
    "pip-licenses>=5,<6",
]
