[project]
name = "auropro-accelerators"
version = "0.0.0"
description = "AuroPro Agentic AI Accelerators — uv workspace root (not published)"
requires-python = ">=3.11,<3.13"
classifiers = ["Private :: Do Not Upload"]

[tool.uv]
package = false
# typer >=0.24 CliRunner closes the captured stderr that dla's structlog logger
# caches (cache_logger_on_first_use), failing dla web tests. Constrained until
# dla's logging is fixed to not cache the stream (tracked in PR #9 review — fix is to stop caching the stream in auropro_core.logging).
constraint-dependencies = ["typer<0.24"]

[tool.uv.workspace]
members = ["libs/*", "apps/*"]

[dependency-groups]
dev = [
    "pytest>=8.2.0,<9",
    "pytest-cov>=5,<8",
    "ruff>=0.4.0,<1",
    "mypy>=1.10.0,<2",
    "types-PyYAML>=6.0.12,<7",
    "httpx>=0.27.0,<1",
    "python-semantic-release>=10.4,<11",
    "pip-licenses>=5,<6",
]
