[project]
name = "auropro-core"
version = "0.1.0"
description = "AuroPro accelerator core — config-loading machinery and structured logging"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Auropro" }]
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "pydantic>=2.7.0,<3",
    "pyyaml>=6.0.1,<7",
    "structlog>=24.1.0,<25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auropro_core"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.semantic_release]
tag_format = "core-v{version}"
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/auropro_core/__init__.py:__version__"]
commit_parser = "conventional-monorepo"
build_command = "uv build --package auropro-core -o ../../dist"

[tool.semantic_release.commit_parser_options]
path_filters = ["."]
