[project]
name = "auropro-llm"
version = "0.1.0"
description = "AuroPro LLM gateway — provider-agnostic completion interface (LiteLLM-backed)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Auropro" }]
dependencies = [
    "pydantic>=2.7.0,<3",
    "litellm>=1.40.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auropro_llm"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["litellm"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.semantic_release]
tag_format = "llm-v{version}"
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional-monorepo"
build_command = "uv build --package auropro-llm -o ../../dist"

[tool.semantic_release.commit_parser_options]
path_filters = ["."]
